
syntax = "proto3";

option go_package = "proto;protogen";
option java_multiple_files = true;
option java_package = "io.bff.service.entities";
option java_outer_classname = "EntitiesProto";

package account;

// Entities
message Account {
  string id = 1;
  string name = 2;
  string address_first_line = 3;
  string address_second_line = 4;
  string postal_code = 5;
  string city = 6;
  string country = 7;
}

message AccountAuthenticate{
  string email = 1;
  string password = 2;
}


message Role {
  string id = 1;
  string name = 2;
  int32 level = 3;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  string surname = 5;
  string token = 6;
  string status = 7;
  string status_reason = 8;

  string phone = 9;

  Role role = 9999;
}

message UserChangePassword{
  string old_password = 1;
  string new_password = 2;
}
